added route guard

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -11,6 +11,10 @@
     display: none;
 }
 
+nav{
+    padding: 25px;
+}
+
 
 img{
     width: 100px;
@@ -28,6 +32,15 @@ img{
 .right{
     position: absolute;
     right:20px;
+}
+
+.left{
+    position: absolute;
+    left:0px;
+    top:90px;
+    width: 100%;
+    padding: 10px;
+
 }
 #side-nav > .row > div{
     background-color: rgba(10,14, 223, 0.3);
