--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -69,7 +69,7 @@
                       <a class=" nav-link " routerLink=""><i class="fas fa-chart-area"></i><span> Progress</span></a>
                   </li>
                   <li class=" col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                    <a class=" nav-link " routerLink=""><i class="fas fa-file-audio"></i><span> Shared Talks</span></a>
+                    <a class=" nav-link " routerLink="sharedTalks"><i class="fas fa-file-audio"></i><span> Shared Talks</span></a>
                 </li>
                 </ul>
         </nav>
