--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,5 +1,6 @@
 <div class="container compress">
   <form class="form-group" [formGroup]= "registerGroup">
+      <h3 class="center">Register:</h3>
     <div class="input-group">
       <i class=" fas fa-user input-group-addon"></i>
         <input 
