--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse right" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a id="modal" class="nav-link" routerLink="" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-bell"></i><i class="fa fa-circle dot"></i></a>
+          <a id="modal" class="nav-link" routerLink="" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-bell"></i><i class="fas fa-circle dot"></i></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink=""><i class="fas fa-tasks"></i><span></span></a>
@@ -50,11 +50,11 @@
     <div class="row">
         <nav class="nav-color navbar col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
                 <ul class="nav nav-pills row" id="loop">
-                    <li id="exclude" class=" col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                        <a class=" nav-link " routerLink="/profile"><img src="https://i.imgur.com/vt1Bu3m.jpg" class=" img-fluid rounded-circle" id="sidenav-img"></a>
+                    <li id="exclude" class=" col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12" *ngIf="isLoggedIn">
+                        <a class=" nav-link " routerLink="profile"><img src="https://i.imgur.com/vt1Bu3m.jpg" class=" img-fluid rounded-circle" id="sidenav-img"></a>
                     </li>
                     <li class=" col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                        <a class=" nav-link " routerLink="/dashboard"><i class="fas fa-tachometer-alt"></i><span> DashBoard</span></a>
+                        <a class=" nav-link " routerLink="dashboard"><i class="fas fa-tachometer-alt"></i><span> DashBoard</span></a>
                     </li>
                     <li class=" col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                         <a class=" nav-link " routerLink=""><i class="fas fa-calendar-check"></i><span> Check-in</span></a>
@@ -63,20 +63,18 @@
                         <a class=" nav-link " routerLink=""><i class="fas fa-stopwatch"></i><span> Reminders</span></a>
                     </li>
                     <li class=" col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                        <a class=" nav-link " routerLink=""><i class="fas fa-user"></i><span> Profile</span></a>
+                        <a class=" nav-link " routerLink="profile"><i class="fas fa-user"></i><span> Profile</span></a>
                     </li>
                     <li class=" col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                       <a class=" nav-link " routerLink=""><i class="fas fa-chart-area"></i><span> Progress</span></a>
                   </li>
                   <li class=" col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                    <a class=" nav-link " routerLink="sharedTalks"><i class="fas fa-file-audio"></i><span> Shared Talks</span></a>
+                    <a class=" nav-link " routerLink="sharedTalks"><i class="fas fa-file-audio"></i><span> Training</span></a>
                 </li>
                 </ul>
         </nav>
 
         <div id="main-body" class="col-9 col-sm-9 col-md-9 col-lg-9 col-xl-9">
-
-            
             <router-outlet></router-outlet>
 
         </div>
