--- a/src/app/shared-talks/shared-talks.component.html
+++ b/src/app/shared-talks/shared-talks.component.html
@@ -10,9 +10,14 @@
           class="custom-file-input" placeholder="choose a file" #file (change)="getFile($event)">
           <label class="custom-file-label" for="customFile">Choose file</label>
       </div>
+      <br>
         <button id="upload" class="btn btn-success" type="submit" (click)="fileUpload()">Upload</button>&nbsp;&nbsp;
         <button id="upload" class="btn btn-success" type="submit" (click)="fileDownload()">View</button>
     </div>
+</div>
+<br>
+<div class="progress" *ngIf= "uploadResponse.status === 'progress'" id="progress-bar">
+    <div class="progress-bar progress-bar-striped progress-bar-animated" [style.width.%]="uploadResponse.upload" role="progressbar" [attr.aria-valuenow]="10" aria-valuemin="0" aria-valuemax="100">{{uploadResponse.upload}}%</div>
 </div>
 
 
