Audio functionality fixed.

--- a/src/app/pagination/pagination.component.less
+++ b/src/app/pagination/pagination.component.less
@@ -26,3 +26,13 @@
     margin-bottom: 20px;
    
 }
+
+#audio{
+    position: absolute;
+    right: 0px;
+    top: 5px;
+}
+
+.mp3{
+    padding: 20px;
+}
