--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -51,6 +51,17 @@ input{
     
 }
 
+#remember{
+    position: absolute;
+    margin-left: 20px;
+    top:5px;
+
+}
+
+select{
+    .custome();
+}
+
 @media only screen and (max-width: @small){
 
     .compress{
