--- a/src/app/register/register.component.less
+++ b/src/app/register/register.component.less
@@ -5,3 +5,45 @@
     font-size: 10px;
     margin-top: 10px; 
 }
+
+.compress{
+    margin: 40px auto;
+    // width: 350px;
+}
+
+button{
+    position: relative;
+    margin: 10px auto;
+}
+
+#loading{
+    position: absolute;
+    transform: translate(50%,-50%);
+    top: 50%;
+    margin: 0 auto;
+    width: 100px;
+    height: 100px;
+    background: black;
+    opacity: 0.5 !important;
+    padding: 10px;
+ 
+}
+#loading > p {
+    position: absolute;
+    transform: translate(50%,-50%);
+    top: 25%;
+    margin: 0 auto;
+    opacity: 0.8 !important;
+    color: white;
+}
+
+#spinner{
+    position: relative;
+    left: 33%;
+    top:33%;
+    bottom: 33%;
+    right: 33%;
+    // transform: translate(50%, 50%);
+    opacity: 1 !important;
+    margin: 0 auto;
+}
