--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 
 <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top sticky-top">
-    <a class="navbar-brand" routerLink=""><img src="https://i.imgur.com/vt1Bu3m.jpg" class=" img-fluid rounded-circle" id="nav-profile"> Navbar</a>
+    <a class="navbar-brand" routerLink="" *ngIf="isLoggedIn"><img src="https://i.imgur.com/vt1Bu3m.jpg" class=" img-fluid rounded-circle" id="nav-profile"> Welcome {{name}}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" id="toggle">
       <span class="navbar-toggler-icon"></span>
     </button>
