--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,7 +56,7 @@
                     <li class=" col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                         <a class=" nav-link " routerLink="dashboard"><i class="fas fa-tachometer-alt"></i><span> DashBoard</span></a>
                     </li>
-                    <li class=" col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                    <!-- <li class=" col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                         <a class=" nav-link " routerLink=""><i class="fas fa-calendar-check"></i><span> Check-in</span></a>
                     </li>
                     <li class=" col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
@@ -67,7 +67,7 @@
                     </li>
                     <li class=" col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                       <a class=" nav-link " routerLink=""><i class="fas fa-chart-area"></i><span> Progress</span></a>
-                  </li>
+                  </li> -->
                   <li class=" col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                     <a class=" nav-link " routerLink="sharedTalks"><i class="fas fa-file-audio"></i><span> Training</span></a>
                 </li>
