--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -94,12 +94,23 @@ img{
         width: 50px;
         height: 50px;
     }
+
+    #collapsibleNavbar{
+        margin-top: 60px;
+    }
     // .right{
     //     position: relative;
     //     right: 0px;
     // }
 
 }
+
+@media only screen and (min-width:@small) and (max-width: 380px){
+    #collapsibleNavbar{
+        margin-top: 60px;
+    }
+}
+
 @media only screen and (min-width:@small) and (max-width: @phone){
     
     .navbar > ul > li >a > span{
@@ -116,6 +127,7 @@ img{
         width: 50px;
         height: 50px;
     }
+
     // .right{
     //     position: relative;
     //     right: 0px;
