changed the import statement

--- a/src/app/register/register.component.less
+++ b/src/app/register/register.component.less
@@ -1,5 +1,4 @@
-@import "/Users/narenpalep/Desktop/Angular:AngularJS/Angular2/team-project/src/app/home/home.component.less";
-
+@import "../home/home.component.less";
 
 #error{
     font-size: 10px;
