--- a/src/app/dashboard/dashboard.component.less
+++ b/src/app/dashboard/dashboard.component.less
@@ -57,9 +57,19 @@ div#form{
   top: 30px;
   transform: translate(10%,-20%);
   background-color: bisque;
-  height: 325px;
+  height: 430px;
   padding: 20px;
   margin-bottom: 50px;
+}
+
+#filter{
+  width: 150px;
+  margin-bottom: 20px;
+  margin-left: 50px;
+}
+.label{
+  margin-top: 20px;
+  margin-left: 50px;
 }
 
 
