side nav made compatible with mobile

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -34,6 +34,11 @@ img{
     right:20px;
 }
 
+.fa-ellipsis-v{
+    color: white;
+    font-size: 20px;
+}
+
 .left{
     position: absolute;
     left:0px;
