--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,10 @@
           <a class="nav-link" (click)="logout()" routerLink="/logout"><i class="fas fa-sign-out-alt"></i><span></span></a>
         </li>    
       </ul>
-    </div>  
+    </div> 
+    <div id="main-menu">
+      <i class="fas fa-ellipsis-v"></i>
+    </div> 
   </nav>
 
 <!-- Modal -->
@@ -48,7 +51,7 @@
 <div class="container-fluid" id="side-nav">
 
     <div class="row">
-        <nav class="nav-color navbar col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+        <nav class="nav-color navbar col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3" id="nav-menu">
                 <ul class="nav nav-pills row" id="loop">
                     <li id="exclude" class=" col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12" *ngIf="isLoggedIn">
                         <a class=" nav-link " routerLink="profile"><img src="https://i.imgur.com/vt1Bu3m.jpg" class=" img-fluid rounded-circle" id="sidenav-img"></a>
