--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,7 +30,8 @@
         name="rememberMe"
         formControlName="rememberMe" #remember><span id="remember">Remember Me</span>
     </div>
-    <button id="login" class="btn btn-success text-center" (click)="auth(email.value, password.value)" type="submit">login</button>
+    <button id="login" class="btn btn-success text-center" (click)="auth(email.value, password.value)" type="submit"
+    [disabled]='f.email.invalid'>login</button>
     <p>Are you new user?<a routerLink="/register"> signup here.</a></p>
   </form>
   <div *ngIf="isLoading" id="loading">
