--- a/src/app/shared-talks/shared-talks.component.html
+++ b/src/app/shared-talks/shared-talks.component.html
@@ -1,6 +1,18 @@
 
 <div class="container" [formGroup]="talksGroup">
     <div id="files">
+      <div class="input-group">
+            <input 
+            name="file_name" 
+            formControlName="file_name"
+            class="form-control input-group-text" type="text" placeholder="File Name" #file_name>
+      </div>
+      <div class="alert alert-danger" *ngIf='f.file_name.invalid && f.file_name.touched'>
+            <div *ngIf='f.file_name.errors.required || f.file_name.errors.maxlength'>
+                Name is required and max 30 chars.
+            </div>
+      </div>
+      <br>
       <div class="custom-file">
           <input 
           id="customFile"
@@ -11,8 +23,8 @@
           <label class="custom-file-label" for="customFile">Choose file</label>
       </div>
       <br>
-        <button id="upload" class="btn btn-success" type="submit" (click)="fileUpload()">Upload</button>&nbsp;&nbsp;
-        <!-- <button id="upload" class="btn btn-success" type="submit" (click)="fileDownload()">View</button> -->
+        <button id="upload" class="btn btn-success" type="submit" (click)="fileUpload(file_name.value)">Upload</button>&nbsp;&nbsp;
+        
     </div>
 </div>
 <br>
