talk promotion added

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,15 +9,9 @@
 
 <div id="content" class="container-fuild row">
 
-
+    
   <div class=" col-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
-      <ul class="list-group">
-          <li class="list-group-item">These Boots Are Made For Walking</li>
-          <li class="list-group-item">Eleanor, Put Your Boots On</li>
-          <li class="list-group-item">Puss 'n' Boots</li>
-          <li class="list-group-item">Die With Your Boots On</li>
-          <li class="list-group-item">Fairies Wear Boots</li>
-      </ul>
+      <pagination [items]="promotedTalkes" [size]="length"></pagination>
   </div>
 
   <div #graph id="graph" class="col-12 col-lg-12 col-md-12 col-sm-12 col-xs-12 canvas">
