--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
           <a class="nav-link" routerLink=""><i class="fas fa-tools"></i><span></span></a>
         </li> 
         <li class="nav-item">
-          <a class="nav-link" (click)="logout()" routerLink="/logout"><i class="fas fa-sign-out-alt"></i><span></span></a>
+          <a class="nav-link" (click)="logout()" routerLink="/"><i class="fas fa-sign-out-alt"></i><span></span></a>
         </li>    
       </ul>
     </div> 
