--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse right" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a id="modal" class="nav-link" routerLink="" data-toggle="modal" data-target="#exampleModal"><i class="fas fa-bell"></i><i class="fas fa-circle dot"></i></a>
+          <a id="modal" class="nav-link" routerLink=""><i class="fas fa-bell"></i><i class="fas fa-circle dot"></i></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink=""><i class="fas fa-tasks"></i><span></span></a>
@@ -38,11 +38,51 @@
           </button>
         </div>
         <div class="modal-body">
-          Test
+            <div class="row">
+                <div class="col-sm-3 col-xs-3 col-3">
+                  <p>Date: {{obj.todayDate}}</p>
+                </div>
+                <div class="col-sm-3 col-xs-3 col-3">
+                    <p>Conv: {{obj.conversations}}</p>
+                </div>
+                <div class="col-sm-3 col-xs-3 col-3">
+                    <p>DTM: {{obj.dtm}}</p>
+                </div>
+                <div class="col-sm-3 col-xs-3 col-3">
+                    <p>MG1: {{obj.mg1}}</p>
+                </div>
+                <div class="col-sm-3 col-xs-3 col-3">
+                    <p>MG2: {{obj.mg2}}</p>
+                </div>
+                <div class="col-sm-3 col-xs-3 col-3">
+                    <p>MG3: {{obj.mg3}}</p>
+                </div>
+                <div class="col-sm-3 col-xs-3 col-3">
+                    <p>BP1: {{obj.bp1}}</p>
+                </div>
+                <div class="col-sm-3 col-xs-3 col-3">
+                    <p>Bp2: {{obj.bp2}}</p>
+                </div>
+                <div class="col-sm-3 col-xs-3 col-3">
+                    <p>FP1: {{obj.fp1}}</p>
+                </div>
+                <div class="col-sm-3 col-xs-3 col-3">
+                    <p>FP2: {{obj.fp2}}</p>
+                </div>
+                <div class="col-sm-3 col-xs-3 col-3">
+                    <p>PreL: {{obj.preLaunch}}</p>
+                </div>
+                <div class="col-sm-3 col-xs-3 col-3">
+                    <p>Launch: {{obj.launch}}</p>
+                </div>
+                <div class="col-sm-3 col-xs-3 col-3">
+                    <p>Others: {{obj.others}}</p>
+                </div>
+              </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-primary" (click)="copy()">Copy to ClipBoard</button>
         </div>
       </div>
     </div>
