--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -102,6 +102,12 @@ select{
     margin: 0 auto;
 }
 
+@media only screen and (max-width: 770px){
+    #login.container{
+        width: 85% !important;
+    }
+}
+
 @media only screen and (max-width: @small){
 
     .compress{
