commented the code

--- a/src/app/password-reset/password-reset.component.html
+++ b/src/app/password-reset/password-reset.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 <div class="container compress" id="login">
     <div class="container alert alert-danger alert-dismissible" *ngIf="!isLoggedIn">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -41,4 +41,4 @@
       <p class="text-center">Checking Credentials...</p>
       <div class="spinner-border text-primary" id="spinner"></div>
   </div>
-</div>
+</div> -->
